different "choose gift" text for mobile to avoid overlap, don't show select as chosen on load

--- a/web/app/themes/cfs/assets/styles/common/_utility.scss
+++ b/web/app/themes/cfs/assets/styles/common/_utility.scss
@@ -44,6 +44,9 @@
   display: none;
   @include media-md {
     display: block;
+    &.-inline {
+      display: inline-block;
+    }
   }
 }
 .hide-for-medium-up {
